--- a/app/src/main/res/layout/activity_panic_button_action.xml
+++ b/app/src/main/res/layout/activity_panic_button_action.xml
@@ -7,7 +7,7 @@
     tools:context=".PanicButtonAction">
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/msgLifeGuard"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/title_panic"
