Add database connection and add user register

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
     tools:context=".Login">
 
     <EditText
-        android:id="@+id/ent_id"
+        android:id="@+id/txt_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
@@ -20,7 +20,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/ent_pw"
+        android:id="@+id/txt_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -31,7 +31,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ent_id" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_id" />
 
     <Button
         android:id="@+id/btnLog_in"
@@ -40,9 +40,9 @@
         android:layout_marginTop="16dp"
         android:text="@string/btnLogin"
         android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="@+id/ent_pw"
-        app:layout_constraintStart_toStartOf="@+id/ent_pw"
-        app:layout_constraintTop_toBottomOf="@+id/ent_pw" />
+        app:layout_constraintEnd_toEndOf="@+id/txt_password"
+        app:layout_constraintStart_toStartOf="@+id/txt_password"
+        app:layout_constraintTop_toBottomOf="@+id/txt_password" />
 
     <Button
         android:id="@+id/btnRegister"
@@ -51,9 +51,9 @@
         android:layout_marginTop="16dp"
         android:text="@string/btnRegister"
         android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="@+id/ent_pw"
+        app:layout_constraintEnd_toEndOf="@+id/txt_password"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/ent_pw"
+        app:layout_constraintStart_toStartOf="@+id/txt_password"
         app:layout_constraintTop_toBottomOf="@+id/btnLog_in" />
 
     <ImageView
