--- a/app/src/main/res/layout/activity_find_hospital.xml
+++ b/app/src/main/res/layout/activity_find_hospital.xml
@@ -12,5 +12,5 @@
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        tools:context=".MapsActivity" />
+        tools:context=".FindHospital" />
 <!--</RelativeLayout>-->
