--- a/app/src/main/res/layout/activity_find_shelter.xml
+++ b/app/src/main/res/layout/activity_find_shelter.xml
@@ -8,4 +8,4 @@
     android:layout_height="match_parent"
     android:layout_alignParentTop="true"
     android:layout_alignParentStart="true"
-    tools:context=".MapsActivity" />
+    tools:context=".FindShelter" />
