--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,76 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout android:layout_width="match_parent"
+<RelativeLayout xmlns:map="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <!--
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <EditText
-                android:id="@+id/location_search"
-                android:layout_width="314dp"
-                android:layout_height="50dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:ems="10"
-                android:textColorHint="@android:color/darker_gray"
-                android:hint="Write your search"/>
-            <ImageButton
-                android:id="@+id/search_button"
-                android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentTop="true"
-                android:onClick="onClick"
-                android:src="@mipmap/search"/>
-        </RelativeLayout>
-        -->
 
-        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:map="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:id="@+id/map"
-            android:name="com.google.android.gms.maps.SupportMapFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true"
-            tools:context=".MapsActivity" />
-    <!--
-    <RelativeLayout
-        android:id="@+id/second_relative_layout"
+    <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginBottom="59dp"
+        tools:context=".MapsActivity" />
 
-        <ImageButton
-            android:id="@+id/hospitals_nearby"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginLeft="67dp"
-            android:onClick="onClick"
-            android:src="@mipmap/hospital" />
-
-        <ImageButton
-            android:id="@+id/shelters_nearby"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_toEndOf="@id/hospitals_nearby"
-            android:onClick="onClick"
-            android:src="@mipmap/shelter" />
-
-        <ImageButton
-            android:id="@+id/restaurant_nearby"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_toEndOf="@id/shelters_nearby"
-            android:onClick="onClick"
-            android:src="@mipmap/food" />
-    </RelativeLayout>
-    -->
-    </RelativeLayout>
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:id="@+id/bottom_navigation"
+        map:itemBackground="@color/black"
+        map:itemIconTint="@drawable/nav_selector"
+        map:itemTextColor="@drawable/nav_selector"
+        map:menu="@menu/bottom_menu"
+        map:labelVisibilityMode="labeled"
+        />
+</RelativeLayout>
 
 
