--- a/app/src/main/res/layout/activity_panic_button_action.xml
+++ b/app/src/main/res/layout/activity_panic_button_action.xml
@@ -7,13 +7,44 @@
     tools:context=".PanicButtonAction">
 
     <TextView
-        android:id="@+id/msgLifeGuard"
+        android:id="@+id/txtConfirm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/title_panic"
+        android:layout_marginTop="50dp"
+        android:text="@string/txt_confirm"
+        android:textColor="#FFEC2112"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/txt_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:gravity="center_horizontal|fill_horizontal"
+        android:text="@string/txt_consideration"
+        android:textColor="#FFEC2112"
+        android:textSize="30sp"
+        android:textStyle="bold|italic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtConfirm"
+        tools:gravity="center_horizontal" />
+
+    <Button
+        android:id="@+id/btn_sendEmergency"
+        android:layout_width="322dp"
+        android:layout_height="76dp"
+        android:layout_marginTop="40dp"
+        android:background="#FFFFEB3B"
+        android:text="@string/btn_emergencyBtn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_info" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
