--- a/app/src/main/res/layout/activity_weather_notice.xml
+++ b/app/src/main/res/layout/activity_weather_notice.xml
@@ -10,10 +10,11 @@
 
     <TextView
         android:id="@+id/city_field"
+
+        android:layout_marginTop="71dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="50dp"
+        android:layout_centerHorizontal="true"
         android:textColor="#FFFFFF"
         android:textSize="28sp" />
 
