Modification on style for Weather layout

--- a/app/src/main/res/drawable/gradient.xml
+++ b/app/src/main/res/drawable/gradient.xml
@@ -3,5 +3,5 @@
         <gradient
             android:type="linear"
             android:textColor="#546F78"
-            android:endColor="@android:color/holo_red_dark"/>
+            android:endColor="@android:color/holo_orange_light"/>
 </shape>
